# osrf_conveyor

./: NEWS  README.md
ariac_example/: CMakeLists.txt
ariac_example/config/: sample_gear_conf.yaml
ariac_example/script/: ariac_example_node.py
ariac_example/scripts/: ariac_example_node.py  gear_example_node.py
ariac_example/src/: ariac_example_node.cpp  gear_example_node.cpp
gazebo_only_components/plugins/: CMakeLists.txt  ConveyorBeltPlugin.cc  ConveyorBeltPlugin.hh  LightCurtainPlugin.cc  LightCurtainPlugin.hh  ProximityRayPlugin.cc  ProximityRayPlugin.hh
gazebo_only_components/worlds/: conveyorbelt.world  lightcurtain.world  proximity_conveyor_control.world  proximitysensor.world
gear_example/: CMakeLists.txt  package.xml
gear_example/config/: sample_gear_conf.yaml
gear_example/scripts/: gear_example_node.py
gear_example/src/: gear_example_node.cpp
osrf_gear/: CMakeLists.txt  README.md  package.xml
osrf_gear/cmake/: 99_osrf_gear_setup.sh.in  setup.sh.in
osrf_gear/config/: comp_conf1.yaml  comp_conf2.yaml  drop_test.yaml  qual1a.yaml  qual1b.yaml  qual2a.yaml  qual2b.yaml  qual3a.yaml  qual3b.yaml  sample.yaml  sample_scenario1.yaml  sample_scenario2.yaml  sample_scenario3.yaml  sample_scenario_drop.yaml  sample_user_config.yaml
osrf_gear/include/: ARIAC.hh  ConveyorBeltPlugin.hh  KitTrayPlugin.hh  ObjectDisposalPlugin.hh  ProximityRayPlugin.hh  ROSAGVPlugin.hh  ROSAriacKitTray.hh  ROSAriacKitTrayPlugin.hh  ROSAriacScoringPlugin.hh  ROSConveyorBeltPlugin.hh  ROSLogicalCameraPlugin.hh  ROSProximityRayPlugin.hh  SideContactPlugin.hh  TopContactPlugin.hh
osrf_gear/include/osrf_gear/: ARIAC.hh  AriacKitTray.h  AriacScorer.h  AriacTaskManagerPlugin.hh  GearTaskPlugin.hh  PopulationPlugin.hh  ROSAriacTaskManagerPlugin.hh  ROSVacuumGripperPlugin.hh  VacuumGripperPlugin.hh
osrf_gear/launch/: break_beam.launch  conveyor.launch  empty_world.launch  gear.launch.template  gear.urdf.xacro.template  gear_playback.launch  gripper.launch  proximity_conveyor_control.launch  sample.launch  sample_environment.launch  scoring_test.launch  simple_workcell.launch  test.launch  ur10_example_world.launch
osrf_gear/launch/linear_arm_actuator/: linear_arm_actuator.urdf.xacro
osrf_gear/launch/ur10/: arm_controller_ur10_custom.yaml  ur10.xml  ur10_with_vacuum_gripper.urdf.xacro  vacuum_gripper.urdf.xacro
osrf_gear/launch/vacuum_gripper/: vacuum_gripper.urdf.xacro
osrf_gear/models/break_beam/: model.sdf
osrf_gear/models/conveyor/: model.dae
osrf_gear/models/conveyor/meshes/: model.sdf
osrf_gear/models/conveyor_belt/: model.sdf
osrf_gear/models/deletion_wall/: model.sdf
osrf_gear/models/disk_part/: model.sdf
osrf_gear/models/gasket_part/: model.sdf
osrf_gear/models/gear_part/: model.sdf
osrf_gear/models/kit_tray/: model.sdf
osrf_gear/models/kit_tray_ariac/: model.sdf
osrf_gear/models/laser_profiler/: model.sdf
osrf_gear/models/logical_camera/: model.sdf
osrf_gear/models/object_disposal/: model.sdf
osrf_gear/models/part1/: model.sdf
osrf_gear/models/part1_outline/: model.sdf
osrf_gear/models/part2/: model.sdf
osrf_gear/models/part2_outline/: model.sdf
osrf_gear/models/part2_sm/: model.sdf
osrf_gear/models/part3/: model.sdf
osrf_gear/models/part4/: model.sdf
osrf_gear/models/pneumatic_gripper/: model.sdf
osrf_gear/models/proximity_sensor/: model.sdf
osrf_gear/models/pulley_part_ariac/: model.sdf
osrf_gear/models/simple_arm_vacuum_gripper/: model.sdf
osrf_gear/models/warehouse_robot/: model.sdf
osrf_gear/models/warehouse_robot_ariac/: model.sdf
osrf_gear/models/workcell/: model.sdf
osrf_gear/models/workcell/meshes/: mesh.dae
osrf_gear/msg/: Goal.msg  Kit.msg  KitObject.msg  KitTray.msg  LogicalCameraImage.msg  Model.msg  Order.msg  ProximitySensorState.msg  VacuumGripperState.msg
osrf_gear/rviz/: ariac.rviz
osrf_gear/script/: gear.py  gear_gen.py  startup.sh
osrf_gear/src/: AriacKitTray.cpp  AriacScorer.cpp  AriacTaskManagerPlugin.cc  ConveyorBeltPlugin.cc  ConveyorController.cc  GearTaskPlugin.cc  KitTrayPlugin.cc  ObjectDisposalPlugin.cc  PopulationPlugin.cc  ProximityRayPlugin.cc  ROSAGVPlugin.cc  ROSAriacKitTray.cc  ROSAriacKitTrayPlugin.cc  ROSAriacScoringPlugin.cc  ROSAriacTaskManagerPlugin.cc  ROSConveyorBeltPlugin.cc  ROSConveyorController.cc  ROSLogicalCameraPlugin.cc  ROSPopulationPlugin.cc  ROSProximityRayPlugin.cc  ROSVacuumGripperPlugin.cc  SideContactPlugin.cc  TopContactPlugin.cc  VacuumGripperPlugin.cc  ariac_scorer_node.cpp
osrf_gear/srv/: AGVControl.srv  GetMaterialLocations.srv  SubmitTray.srv
osrf_gear/test/: CMakeLists.txt  ariac_rosapi.test  ariac_rosapi.yaml  ros_api_checker
osrf_gear/worlds/: ariac.world  break_beam.world  conveyor.world  gear.world.template  gripper.world  proximity_conveyor_control.world  sample.world  scoring_test.world  simple_workcell.world  ur10_example.world
test_ariac/: CMakeLists.txt  ariac_example.test  ariac_qual2a.test  ariac_qual2a_scoring.test  ariac_qual2a_scoring_immediate.test  ariac_qual2b.test  ariac_qual2b_scoring.test  ariac_qual2b_scoring_after_waiting.test  ariac_rosapi.test  ariac_rosapi.yaml  ariac_tf_frames.test  gripper.test  gripper_unthrottled.test  minimal_sample_unthrottled.yaml  qual2a_testing.yaml  qual2b_testing.yaml  test_example_node.py  test_gripper.py  test_gripper_unthrottled.py  test_scoring.py  test_scoring_after_waiting.py  test_scoring_immediate.py  test_tf_frames.py
test_ariac/test_scoring/: ariac_scoring_correct_parts_incorrect_poses.test  ariac_scoring_correct_parts_not_flipped.test  ariac_scoring_correct_parts_plus_faulty.test  ariac_scoring_correct_parts_plus_unwanted.test  ariac_scoring_faulty_parts.test  ariac_scoring_interrupted.test  ariac_scoring_low_priority_order.test  ariac_scoring_missing_parts.test  ariac_scoring_not_interrupted.test  ariac_scoring_perfect_kit.test  ariac_scoring_perfect_kit_flipped.test  scoring_base_order.yaml  scoring_base_order_flipped.yaml  scoring_correct_parts_not_flipped.yaml  scoring_correct_parts_plus_faulty.yaml  scoring_faulty_parts.yaml  scoring_perfect_kit_flipped.yaml
(+7 files in other folders)
