<?xml version="1.0"?>
<package>
  <name>osrf_gear</name>
  <version>0.1.0</version>
  <description>
    The ROS package for the NIST Industrial Automation Competition
  </description>
  <maintainer email="caguero@osrfoundation.org">Carlos Aguero</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_plugins</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>

</package>