<?xml version="1.0"?>
<package format="2">
  <name>osrf_gear</name>
  <version>0.1.0</version>
  <description>
    The ROS package for the NIST Industrial Automation Competition.
  </description>

  <author email="caguero@osrfoundation.org">Carlos Aguero</author>
  <author email="dhood@osrfoundation.org">D. Hood</author>
  <author email="william@osrfoundation.org">William Woodall</author>

  <!-- ur_gazebo authors -->
  <author>Alexander Bubeck</author>
  <author email="sedwards@swri.org">Shaun Edwards</author>
  <author email="fxm@ipa.fhg.de">Felix Messmer</author>

  <!-- ur_description authors -->
  <author>Wim Meeussen</author>
  <author email="kphawkins@gatech.edu">Kelsey Hawkins</author>
  <author>Mathias Ludtke</author>
  <author email="fxm@ipa.fhg.de">Felix Messmer</author>

  <maintainer email="dhood@osrfoundation.org">D. Hood</maintainer>
  <license>Apache 2.0</license>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>gazebo_plugins</depend>
  <depend>gazebo_ros</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf</depend>
  <depend>geometry_msgs</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
